CMF 1.5.0beta2 (unreleased)

  New Features

    - PortalFolder: Improved WebDAV folder listings.
      Hidden sub-objects like tools are now filtered out. To see all
      sub-objects, you need the 'Manage portal' permission.

  Bug Fixes

    - ZPT skin: Improved folder_copy_control and folder_cut_control.
      They now catch CopyErrors.

    - DirectoryView: Readded expandpath() for backwards compatibility.
      Some products still import expandpath from DirectoryView because it was
      once defined there. Note that importing expandpath from DirectoryView is
      deprecated and doesn't work with CMF HEAD / 1.6.

CMF 1.5.0beta (2004/08/12)

  New Features

    - The CMF is now under the terms of version 2.1 of the Zope Public
      License (ZPL); it was previously under ZPL version 2.0.

    - TypeInfos: Marked getActionById as deprecated.
      Use getActionInfo if you need an URL or getMethodPath if you need a
      method.

    - CatalogTool.CatalogTool now has a private 'unrestrictedSearchResults'
      method bypassing the effective and expiry date and roles. The new
      method has to be used with care to not expose security holes in
      applications using the CatalogTool.

    - CMFCalendar.CalendarTool: Made workflow states configurable TTW.
      (http://zope.org/Collectors/CMF/110)

    - Minor featurelet: The "Action Providers" ZMI tab on the portal_actions
      tool now links directly to the tools shown
      (http://zope.org/Collectors/CMF/181)

    - CMFCore.utils: Introduced contributorsplitter() utility function
      along the lines of keywordsplitter().

    - Actions and Action providers: Further refactoring.

      o Removed again OldstyleActionProvider Interface and
        OldstyleActionProviderBase that existed only in 1.5.0-alpha.
        ActionProvider now also works with oldstyle Action mappings.

      o listActionInfos() and getActionInfo() now return ActionInfo objects