@@ -14,6 +14,9 @@
 
 $Id$
 """
+
+from warnings import warn
+
 from Acquisition import aq_base
 from MethodObject import Method
 
@@ -63,6 +66,9 @@ class WorkflowMethod( Method ):
     _need__name__=1
 
     def __init__(self, method, id=None, reindex=1):
+        warn('WorkflowMethod() alias WorkflowAction() is deprecated and will '
+             'be removed in CMF 1.6.',
+             DeprecationWarning)
         self._m = method
         if id is None:
             id = method.__name__
