@@ -20,7 +20,6 @@ from Globals import InitializeClass
 from AccessControl import ClassSecurityInfo
 
 from Products.CMFCore.PortalContent import PortalContent
-from Products.CMFCore.WorkflowCore import WorkflowAction
 
 from DublinCore import DefaultDublinCoreImpl
 from permissions import View
@@ -209,8 +208,6 @@ class Image( OFS.Image.Image
         """ Update and reindex. """
         self._edit( precondition, file )
         self.reindexObject()
-
-    edit = WorkflowAction(edit)
 
     security.declareProtected(View, 'index_html')
     def index_html(self, REQUEST, RESPONSE):
